<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.palladiosimulator.blockchainsystems</groupId>
        <artifactId>org.palladiosimulator.blockchainsystems</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
    <artifactId>org.palladiosimulator.blockchainsystems.doublespending</artifactId>

    <dependencies>
        <dependency>
            <groupId>org.palladiosimulator.blockchainsystems</groupId>
            <artifactId>
                org.palladiosimulator.blockchainsystems.core
            </artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.palladiosimulator.blockchainsystems</groupId>
            <artifactId>
                org.palladiosimulator.blockchainsystems.loggers
            </artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>23</source>
                    <target>23</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>